refactor(cli): 统一重构 CLI 配置注入机制
- 移除废弃的 kiro-cli 和 codex CLI Provider 配置及相关代码
- Claude Code 支持自定义模型配置，环境变量注入 ANTHROPIC_API_KEY、ANTHROPIC_BASE_URL、ANTHROPIC_MODEL
- Claude Code MCP 配置文件从 .claude/settings.json 迁移到 .mcp.json
- 优化 Qwen Code 配置，API Key 不再写入 settings.json 的 env 字段
- 为 Claude Code 和 QoderCli 新增 Skills 配置写入，支持项目级 SKILL.md 文件注入
- 统一所有 CLI 的认证信息通过环境变量注入，避免敏感信息写入磁盘
- 配置文件写入失败时记录日志并继续执行，确保环境变量注入不中断
- 各 CLI Skills 配置目录隔离，防止配置冲突